--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "react-router-bootstrap": "^0.24.4",
+    "react-select": "^2.1.1",
     "read-excel-file": "^2.0.5",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
