--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "react-bootstrap-table-next": "^1.4.1",
     "react-router-bootstrap": "^0.24.4",
     "react-select": "^2.1.1",
     "read-excel-file": "^2.0.5",
