--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "react-bootstrap-table-next": "^1.4.1",
+    "react-bootstrap-table2-paginator": "^1.0.4",
+    "react-bootstrap-table2-toolkit": "^1.1.1",
     "react-router-bootstrap": "^0.24.4",
     "react-select": "^2.1.1",
     "read-excel-file": "^2.0.5",
