--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-bootstrap-table-next": "^1.4.1",
     "react-bootstrap-table2-paginator": "^1.0.4",
     "react-bootstrap-table2-toolkit": "^1.1.1",
+    "react-data-export": "^0.5.0",
     "react-router-bootstrap": "^0.24.4",
     "react-select": "^2.1.1",
     "read-excel-file": "^2.0.5",
