--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "file-saver": "^2.0.0",
     "react-bootstrap-table-next": "^1.4.1",
     "react-bootstrap-table2-paginator": "^1.0.4",
     "react-bootstrap-table2-toolkit": "^1.1.1",
@@ -54,6 +55,7 @@
     "read-excel-file": "^2.0.5",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "xlsx": "^0.14.1"
   }
 }
